add game result to UI

--- a/index.html
+++ b/index.html
@@ -30,8 +30,13 @@
       </div>
     </div>
     <div class="container hidden">
-      <h1 class="turn"></h1>
-      <div class="board"></div>
+      <div class="game-board">
+        <h1 class="turn"></h1>
+        <div class="board"></div>
+      </div>
+      <div class="result">
+        <button class="btn-new">New game</button>
+      </div>
     </div>
     <script src="script.js"></script>
   </body>
