restart game and DRY code

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="board"></div>
       </div>
       <div class="result">
-        <button class="btn-new">New game</button>
+        <button class="btn-new">Restart game</button>
       </div>
     </div>
     <script src="script.js"></script>
